@@ -69,6 +69,11 @@
 	  <widget>
 	    <class>GtkMenuItem</class>
 	    <name>menu_bar_file_new</name>
+	    <signal>
+	      <name>activate</name>
+	      <handler>on_menu_bar_file_new_activated</handler>
+	      <last_modification_time>Mon, 12 Jun 2006 21:03:44 GMT</last_modification_time>
+	    </signal>
 	    <label>_New</label>
 	    <right_justify>False</right_justify>
 	  </widget>
